<resources>
    <string name="app_name">Todo Application</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="deadline">Deadline</string>
    <string name="todo_title">Todo Title</string>
    <string name="todo_status">Priority</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="open_nav">Open Nav</string>
    <string name="close_nav">Close Nav</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">Home fragment</string>
    <string name="information_fragment">Information Fragment</string>
    <string name="setting_fragment">Setting Fragment</string>
    <string name="share_fragment">Share Fragment</string>
    <string name="todos_description">Todos Description</string>
    <string name="todos_title">Todos Title</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="very_high">Very High</string>
    <string name="settings_details">Here some of the options</string>
    <string name="information_list">Information list</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Recycler View</string>
    <string name="todos_application">Todos Application</string>
    <string name="toast">Toast</string>
    <string name="select_image">Select Image</string>
    <string name="go_back">Go Back</string>
    <string-array name="namesArray">
        <item>Name 1</item>
        <item>Name 2</item>
        <item>Name 3</item>
        <item>Name 4</item>
        <item>Name 5</item>
        <item>Name 6</item>
        <item>Name 7</item>
        <item>Name 8</item>
        <item>Name 9</item>
        <item>Name 10</item>
    </string-array>
</resources>