<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.HomeFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="15dp"
                android:text="Todo Application"
                android:textStyle="bold"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlined_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/todos_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/todos_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deadline"
                android:layout_gravity="start"
                android:layout_marginTop="25dp"
                android:textSize="18sp" />

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxDate="2024-07-01"
                android:minDate="2024-07-01"

                android:id="@+id/deadline_picker"
                style="@style/DatePickerStyle"
                android:calendarViewShown="false" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/todos_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/todos_description"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:minLines="2"
                    android:gravity="top|start"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo_status"
                android:layout_gravity="start"
                android:layout_marginTop="25dp"
                android:textSize="18sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/priority_chips"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">
                <com.google.android.material.chip.Chip
                    android:id="@+id/low_priority"
                    style="@style/Widget.MaterialComponents.Chip.Choice"

                    android:textAlignment="center"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"

                    android:text="@string/low" />
                <com.google.android.material.chip.Chip
                    android:id="@+id/high_priority"
                    style="@style/Widget.MaterialComponents.Chip.Choice"

                    android:textAlignment="center"
                    android:layout_width="100dp"

                    android:layout_height="wrap_content"

                    android:text="@string/high" />
                <com.google.android.material.chip.Chip
                    android:id="@+id/v_high_priority"
                    android:layout_width="100dp"
                    android:textAlignment="center"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_height="wrap_content"

                    android:text="@string/very_high" />
            </com.google.android.material.chip.ChipGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    style="?attr/materialButtonOutlinedStyle" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discard"
                    android:layout_marginStart="5dp"
                    style="?attr/materialButtonOutlinedStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
