<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="31dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView2"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_details" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:checked="false"
            android:textSize="18sp"
            app:useMaterialThemeColors="false"
            android:button="@drawable/custom_checkbox"
            android:text="Option 1"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Option 2"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="Option 3"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="Option 4"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="Option 5"/>


        </RadioGroup>

        <Button
            android:id="@+id/buttonToast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toast"
            style="?attr/materialButtonOutlinedStyle"
            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>